logs/diesel.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/Twiggy-0.4.7.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/diesel'...
Compiling './lib/python3.5/site-packages/diesel/app.py'...
***   File "./lib/python3.5/site-packages/diesel/app.py", line 83
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/client.py'...
***   File "./lib/python3.5/site-packages/diesel/client.py", line 35
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/console.py'...
***   File "./lib/python3.5/site-packages/diesel/console.py", line 66
    print data.rstrip()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/core.py'...
***   File "./lib/python3.5/site-packages/diesel/core.py", line 146
    except ConnectionClosed, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/hub.py'...
***   File "./lib/python3.5/site-packages/diesel/hub.py", line 124
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/pipeline.py'...
***   File "./lib/python3.5/site-packages/diesel/pipeline.py", line 8
    raise ImportError, "cStringIO is required"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diesel/protocols'...
Compiling './lib/python3.5/site-packages/diesel/protocols/dreadlock.py'...
***   File "./lib/python3.5/site-packages/diesel/protocols/dreadlock.py", line 54
    print "start!", id
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/diesel/protocols/http'...
Compiling './lib/python3.5/site-packages/diesel/protocols/http/pool.py'...
***   File "./lib/python3.5/site-packages/diesel/protocols/http/pool.py", line 47
    except diesel.ClientConnectionClosed, e:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/protocols/irc.py'...
***   File "./lib/python3.5/site-packages/diesel/protocols/irc.py", line 169
    print 'Hmm, unknown type returned from message handler:', type(r)
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/protocols/mongodb.py'...
***   File "./lib/python3.5/site-packages/diesel/protocols/mongodb.py", line 361
    print "saw request with opcode", opcode
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/diesel/protocols/pg.py'...
***   File "./lib/python3.5/site-packages/diesel/protocols/pg.py", line 236
    print 'PREP'
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/diesel/protocols/riak.py'...
***   File "./lib/python3.5/site-packages/diesel/protocols/riak.py", line 164
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/protocols/wsgi.py'...
***   File "./lib/python3.5/site-packages/diesel/protocols/wsgi.py", line 23
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/protocols/zeromq.py'...
***   File "./lib/python3.5/site-packages/diesel/protocols/zeromq.py", line 49
    except zmq.ZMQError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/security.py'...
***   File "./lib/python3.5/site-packages/diesel/security.py", line 15
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diesel/util'...
Compiling './lib/python3.5/site-packages/diesel/util/debugtools.py'...
***   File "./lib/python3.5/site-packages/diesel/util/debugtools.py", line 35
    print '[%d] === %s ===' % (count, loop_id)
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diesel/util/patches'...
Compiling './lib/python3.5/site-packages/diesel/util/process.py'...
***   File "./lib/python3.5/site-packages/diesel/util/process.py", line 94
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diesel/web.py'...
***   File "./lib/python3.5/site-packages/diesel/web.py", line 73
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diesel-3.0.24.egg-info'...
Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/http_parser'...
Listing './lib/python3.5/site-packages/http_parser-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/twiggy'...
Listing './lib/python3.5/site-packages/twiggy/features'...
Listing './lib/python3.5/site-packages/twiggy/lib'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
